// Generated by tool. DO NOT EDIT!
// source: IN_Data.xlsx
// haogang.chen@nebuliumgames.com 


option java_package = "com.nb";
option java_outer_classname = "GameConfigAdvLevelMsg";
message GameConfigAdvLevel
{
    required int32 levelId = 1;
    required int32 maxExp = 2;
    required int32 maxSkillLevel = 3;
    required int32 replaceSkillCosts = 4;
}