// Generated by tool. DO NOT EDIT!
// source: IN_Data.xlsx
// haogang.chen@nebuliumgames.com 

import "GameConfigRequire.proto";

option java_package = "com.nb";
option java_outer_classname = "GameConfigRewardPoolMsg";
message GameConfigRewardPool
{
    required int32 typeId = 1;
    required int32 rewardPoolId = 2;
    required string poolName = 3;
    required int32 itemId = 4;
    required string name = 5;
    required int32 amount = 6;
    required int32 weight = 7;
    repeated GameConfigRequire requires = 8;
    required string tavernLevels = 9;
}